# jenkins-sdk-rust

./: CHANGELOG.md  Cargo.toml  README.md
examples/: async_test.rs  sync_test.rs
src/: error.rs  lib.rs  query.rs  types.rs
src/client/: async_client.rs  mod.rs  sync_client.rs
src/endpoint/: builds.rs  executors.rs  jobs.rs  mod.rs  queue.rs
