[package]
name = "jenkins-sdk"
description = "📦 Jenkins API SDK written in Rust"
version = "0.1.5"
edition = "2024"
license = "MIT"
authors = ["lvillis<lvillis@outlook.com>"]
repository = "https://github.com/lvillis/jenkins-sdk-rust"
homepage = "https://github.com/lvillis/jenkins-sdk-rust"
documentation = "https://github.com/lvillis/jenkins-sdk-rust/blob/main/README.md"
exclude = [
    "/docs/",
    "/tests/",
    "/.config/",
    "/.github/",
    "/.justfile",
    "/rust-toolchain.toml",
    "/.gitignore",
]

[dependencies]
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
async-trait = "0.1"
tokio = { version = "1.44.1", default-features = false, features = ["rt", "rt-multi-thread", "macros"], optional = true }
http = "1.3.1"

[features]
default = ["async"]
async = ["tokio"]

[package.metadata.release]
tag-prefix = ""
tag-name = "{{prefix}}{{version}}"
pre-release-commit-message = "chore: release {{crate_name}} version {{version}}"
tag-message = "chore: release {{crate_name}} version {{version}}"
pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
